fix: fix style issues and hide dark mode toggler

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -2,6 +2,7 @@
   /*font-size: 72px;*/
   background: linear-gradient(to right, #2e3192 10%, darkmagenta);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
